Fixed spacing

--- a/css/product-list.css
+++ b/css/product-list.css
@@ -6,9 +6,8 @@
 }
 
 .product-box {
-    width: 250px;
     display: grid;
-    grid-template-rows: 250px 130px 40px;
+    grid-template-rows: 250px auto 40px;
     margin: .8rem 0 0 0;
     border: 2px solid var(--nav);
     border-radius: 15px;
@@ -23,11 +22,23 @@
 
 .product-list_image {
     width: 100%;
-
+    max-height: 100%;
     border-radius: 15px 15px 0 0;
 }
 
+.product-list_info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .product-list_name {
+    display: -webkit-box;
+    max-width: 100%;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
     color: black;
 }
 
@@ -35,10 +46,15 @@
     color: blue;
 }
 
+.product-list_name,
+.product-list_price {
+    margin: .5rem .2rem;
+}
+
 .product-list_btn {
     display: block;
     text-align: center;
-    margin: .6rem 0 0 0;
+    margin: 0;
     padding: 0.5em;
     background: var(--link-bg);
     color: white;
@@ -50,7 +66,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-    
+
     .product-list {
         max-width: 98%;
         display: grid;
@@ -58,5 +74,4 @@
         justify-content: center;
         gap: .8rem;
     }
-
 }
